Implement chicken-burrito page, link to index
[x] Link index.html to chicken-burrito.html
[x] Add chicken burrito recipe

--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Burrito</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chicken Burrito</title>
 </head>
+
 <body>
-    <h1>Chicken Burrito</h1>
+  <h1>Chicken Burrito</h1>
+  <img src="../img/chicken-burrito.png" width="600" height="400" />
+  <h2>Description</h2>
+  <p>
+    The Chicken Burrito is an EXCELLENT choice for those seeking a convenient
+    and delicious meal on the move. Crafted with succulent chicken breast,
+    flavorful Mexican rice, creamy refried beans, a generous amount of cheddar
+    cheese, and a special blend of seasonings, it's expertly wrapped in a soft
+    flour tortilla. This delightful creation is then frozen, ready to be
+    enjoyed whenever the craving strikes!
+  </p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>2 tablespoons canola oil</li>
+    <li>1 teaspoon kosher salt</li>
+    <li>1 pound chicken breast, boneless, skinless</li>
+    <li>1/2 cup chopped onion</li>
+    <li>3 cloves garlic, minced</li>
+    <li>3 tablespoons tomato paste</li>
+    <li>1/2 tablespoon ground cumin</li>
+    <li>1 teaspoon chili powder</li>
+    <li>1 teaspoon dried oregano</li>
+    <li>2 tablespoons fresh lime juice</li>
+    <li>1/4 cup water</li>
+    <li>2 cups prepared Mexican rice</li>
+    <li>1 can (15 oz.) refried beans</li>
+    <li>2 cups shredded cheddar cheese</li>
+    <li>8 tablespoons sour cream</li>
+    <li>8 large flour tortillas (10-inch diameter)</li>
+  </ul>
+
+  <ul></ul>
 </body>
+
 </html>
