--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/chicken-burrito.html">Chicken Burrito</a>
     </body>
 </html>
