Add Salmon Risotto and finish Chicken Burrito
[x] Add chicken burrito instructions to page
[x] Add Salmon Risotto page

--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -39,8 +39,27 @@
     <li>8 tablespoons sour cream</li>
     <li>8 large flour tortillas (10-inch diameter)</li>
   </ul>
-
-  <ul></ul>
+  <h2>Instructions</h2>
+  <ol>
+    <li>Add the canola oil to a cast iron skillet on medium heat. Season the chicken with salt and cook for 4-5 minutes
+      on
+      each side. Remove the chicken from the pan.</li>
+    <li>Add the onion and garlic to the skillet and cook for 1-2 minutes.</li>
+    <li>Add tomato paste, cumin, chili powder, oregano, salt, lime juice, and water to the skillet. Cook and stir until
+      the
+      mixture comes to a slight boil. Reduce heat to low and cook for 5 to 8 minutes.</li>
+    <li>Chop the chicken finely and add it back into the pan. Cook down the chicken with the mixture.</li>
+    <li>Remove the skillet from heat and let it stand for 15 minutes or until the mixture reaches warm room temperature.
+    </li>
+    <li>Lay tortillas out on a flat surface.</li>
+    <li>Divide the beans, chicken, rice, cheddar cheese, and sour cream among the 8 tortillas.</li>
+    <li>Fold each tortilla burrito-style.</li>
+    <li>Wrap each burrito with plastic wrap and place them in a freezer-safe ziplock bag.</li>
+    <li>Freeze the burritos for up to 2 months.</li>
+    <li>To reheat, unwrap the burrito from the plastic wrap and place it on a microwave-safe plate.</li>
+    <li>Microwave the burrito for 2 to 3 minutes or until heated through.</li>
+    <li>Enjoy your delicious reheated burrito!</li>
+  </ol>
 </body>
 
 </html>
