--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/chicken-burrito.html">Chicken Burrito</a>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipes</title>
+</head>
+
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
+        <li><a href="recipes/salmon-risotto.html">Salmon Risotto</a></li>
+        <li><a href="recipes/prawn-pasta.html">Prawn Pasta</a></li>
+    </ul>
+</body>
+
 </html>
