--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
-        <li><a href="recipes/salmon-risotto.html">Salmon Risotto</a></li>
-        <li><a href="recipes/prawn-pasta.html">Prawn Pasta</a></li>
+        <li><a href="recipes/chicken-burrito.html">CHICKEN BURRITO</a></li>
+        <li><a href="recipes/salmon-risotto.html">SALMON RISOTTO</a></li>
+        <li><a href="recipes/prawn-pasta.html">PRAWN PASTA</a></li>
     </ul>
 </body>
 
