Add alt text to recipe images for accessibility

--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Chicken Burrito</h1>
-  <img src="../img/chicken-burrito.png" width="600" height="400" />
+  <img src="../img/chicken-burrito.png" alt="image of complete chicken burrito dish" width="600" height="400" />
   <h2>Description</h2>
   <p>
     The Chicken Burrito is an EXCELLENT choice for those seeking a convenient
