--- a/recipes/prawn-pasta.html
+++ b/recipes/prawn-pasta.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Prawn pasta</h1>
-    <img src="../img/prawn-pasta.jpg">
+    <img src="../img/prawn-pasta.jpg" alt="image of complete prawn pasta dish">
     <h2>Description</h2>
     Transform this simple pasta dish into a speedy midweek meal by incorporating succulent tiger prawns. In less than 30
     minutes, you'll have a delicious and satisfying dish. Plus, it's versatile enough to be easily scaled down or up to
