--- a/recipes/salmon-risotto.html
+++ b/recipes/salmon-risotto.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Salmon Risotto</h1>
-    <img src="../img/salmon-risotto.jpg" width="600" height="400">
+    <img src="../img/salmon-risotto.jpg" alt="image of complete salmon risotto dish" width="600" height="400">
     <h2>Description</h2>
     <p>Indulge in a comforting dinner of creamy rice and tender salmon. Enhance the flavors with a hint of lemon juice
         and
