--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <a href="../index.html">Home</a>
   <h1>Chicken Burrito</h1>
   <img src="../img/chicken-burrito.png" alt="image of complete chicken burrito dish" width="600" height="400" />
   <h2>Description</h2>
