--- a/recipes/prawn-pasta.html
+++ b/recipes/prawn-pasta.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Home</a>
     <h1>Prawn pasta</h1>
     <img src="../img/prawn-pasta.jpg" alt="image of complete prawn pasta dish">
     <h2>Description</h2>
