--- a/recipes/salmon-risotto.html
+++ b/recipes/salmon-risotto.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Home</a>
     <h1>Salmon Risotto</h1>
     <img src="../img/salmon-risotto.jpg" alt="image of complete salmon risotto dish" width="600" height="400">
     <h2>Description</h2>
